--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 certifi==2022.12.7
 charset-normalizer==3.0.1
 idna==3.4
+pydantic==1.10.5
 requests==2.28.2
+typing_extensions==4.5.0
 urllib3==1.26.14
